# vk-botfarm-api

./: .docker.env  .dockerignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  settings.py  start.sh
api/v1/: __init__.py  auth.py  users.py
database/: Dockerfile  setup_db.sh
database/controllers/: ping.py  users.py
database/models/: base.py  user.py
k8s/: botfarm-deployment.yaml  database-statefulset.yaml
migrations/: env.py
migrations/versions/: 43daa51e4337_init_database.py
schemas/v1/: errors.py  users.py
tests/: conftest.py  test_auth.py  test_get_users_list.py  test_lock_user.py  test_ping.py  test_post_user.py  test_unlock_user.py
utils/: auth.py  enums.py  tests.py
